--- a/Refund/styles.css
+++ b/Refund/styles.css
@@ -5,7 +5,7 @@
 }
 
 :root {
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: 16px;
 }
 
@@ -268,7 +268,7 @@ aside ul {
 
 @media (min-width: 1100px) {
   form {
-    max-height: 428px;
+    max-height: 462px;
   }
 }
 
