--- a/GuiaPress/views/index.ejs
+++ b/GuiaPress/views/index.ejs
@@ -1,7 +1,7 @@
 <%- include('partials/header') %>
 
 <div class="container">
-  <h1>Teste</h1>
+  <h1>Home</h1>
 </div>
 
 <%- include('partials/footer') %>
