--- a/GuiaPress/views/index.ejs
+++ b/GuiaPress/views/index.ejs
@@ -1,7 +1,26 @@
-<%- include('partials/header') %>
+<%- include('partials/header') %> <%- include('partials/homenavbar') %>
 
 <div class="container">
-  <h1>Home</h1>
-</div>
+  <div class="jumbotron">
+    <hr />
+    <h1 class="display-4">Bem vindo!</h1>
+    <p class="lead">
+      Este é um simples blog de estudo, onde você pode encontrar artigos
+      interessantes sobre diversos assuntos.
+    </p>
+    <hr class="my-4" />
+    <p>Ele usa Node.js, Express e EJS para renderizar as páginas.</p>
+  </div>
+  <hr />
 
-<%- include('partials/footer') %>
+  <% articles.forEach(article => { %>
+  <div class="card mb-3">
+    <div class="card-header">
+      <h2><%= article.title %></h2>
+    </div>
+    <div class="card-body">
+      <a href="/<%= article.slug %>" class="btn btn-success">Ler Artigo</a>
+    </div>
+  </div>
+  <% }) %> <%- include('partials/footer') %>
+</div>
