--- a/GuiaPress/views/partials/navbar.ejs
+++ b/GuiaPress/views/partials/navbar.ejs
@@ -1,11 +1,16 @@
 <nav class="navbar navbar-dark bg-primary navbar-expand-lg">
-  <a class="navbar-brand ms-2" href="/">GuiaPress</a>
-  <ul class="navbar-nav" style="margin-right: 1730px">
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/categories">Categorias</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/admin/articles">Artigos</a>
-    </li>
-  </ul>
+  <div class="container">
+    <a class="navbar-brand" href="/">GuiaPress</a>
+
+    <div class="collapse navbar-collapse">
+      <ul class="navbar-nav mx-auto"> <!-- mx-auto para centralizar horizontalmente -->
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/categories">Categorias</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/admin/articles">Artigos</a>
+        </li>
+      </ul>
+    </div>
+  </div>
 </nav>
